##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

copy("assets") {
  sources = [
    "cube.obj",
    "plane.obj",
    "wolf.obj",

    "basecolor.png",
    "metallic.png",
    "normal.png",
    "roughness.png",

    "UbuntuMono-Regular.ttf",
  ]

  outputs = [
    "$root_out_dir/assets/{{source_file_part}}"
  ]
}
