##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

import("//core/gpu/texture.gni")

group("assets") {
  deps = [
    ":misc",
    ":texture",
  ]
}

copy("misc") {
  sources = [
    "cube.obj",
    "plane.obj",
    "wolf.obj",

    "UbuntuMono-Regular.ttf",
  ]

  outputs = [
    "$root_out_dir/assets/{{source_file_part}}"
  ]
}

texture("texture") {
  format = "BC7"
  sources = [
    "basecolor.png",
    "metallic.png",
    "normal.png",
    "roughness.png",

    "negx.png",
    "negy.png",
    "negz.png",
    "posx.png",
    "posy.png",
    "posz.png",
  ]
}
